--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "editor.formatOnSave": true,
-    "cSpell.autoFormatConfigFile": true
+    "cSpell.autoFormatConfigFile": true,
+    "cSpell.words": [
+        "maincolor",
+        "mainpadding"
+    ]
 }
